@@ -36,6 +36,7 @@ sysincludes = @SYSINCLUDES@
 
 elf = @elf@
 have-protected = @libc_cv_asm_protected_directive@
+have-z-nodelete = @libc_cv_z_nodelete@
 have-initfini = @libc_cv_have_initfini@
 need-nopic-initfini = @nopic_initfini@
 with-cvs = @with_cvs@
