@@ -1,0 +1,1 @@
+int var1 = 42;
