@@ -1,0 +1,1 @@
+int var2 = 100;
