@@ -37,6 +37,9 @@ libpthread-routines := attr cancel condvar join manager mutex ptfork \
 		       semaphore spinlock wrapsyscall rwlock pt-machine \
 		       oldsemaphore events getcpuclockid pspinlock barrier
 
+nodelete-yes = -Wl,--enable-new-dtags,-z,nodelete
+LDFLAGS-pthread.so = $(nodelete-$(have-z-nodelete))
+
 vpath %.c Examples
 tests = ex1 ex2 ex3 ex4 ex5 ex6 ex7 ex8 ex9 ex10 ex11 joinrace
 
